--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,6 @@
 server:
   port: 8000
+  deploy-ip: 192.168.50.112
 spring:
   application:
     name: vuitton-plus
@@ -8,7 +9,7 @@ spring:
       enabled: always
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/vuitton_plus?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&autoReconnect=true&failOverReadOnly=false&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://${server.deploy-ip}:3306/vuitton_plus?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&autoReconnect=true&failOverReadOnly=false&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: root
   data:
@@ -26,8 +27,8 @@ logging:
     com.moriaty.vuitton.dao.mapper: INFO
 
 file-server:
-  url: http://%s:8100
-  upload-url: http://%s:8102/api/file/upload
+  url: http://${server.deploy-ip}:8100
+  upload-url: http://${server.deploy-ip}:8102/api/file/upload
   video:
     url-prefix: /video
     video-folder: ${file-server.video.url-prefix}/
