修复横屏播放相关问题 增加播放记忆

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,12 +14,13 @@ spring:
     password: root
   data:
     redis:
-      host: 127.0.0.1
+      host: ${server.deploy-ip}
       port: 6379
       database: 0
       client-type: jedis
       jedis:
         pool:
+          enabled: true
           max-active: 20
           max-idle: 30
 logging:
